Fixing platform colours, and panning speed on mobile

--- a/public/stylesheets/mobilia/main.css
+++ b/public/stylesheets/mobilia/main.css
@@ -120,17 +120,23 @@ body {
     flex-wrap: wrap;
     margin: 0px 10px;
   }
+    .instructions h3 {
+      margin: 0.4em;
+    }
   .instructions .row {
     width: 50%;
     height: 130px;
     margin: 0;
   }
   .instructions .confirm button {
-    color: #000;
+    color: #FFF;
+    font-size: 20px;
     background-color: #E74C3C;
     width: 100%;
     height: 10%;
     border: none;
+    width: 200px;
+    height: 50px;
   }
 
 .left {
